# point-and-triangle

./: .gitignore  CMakeLists.txt  Read.me  ptt.cpp
